feat: 生成AIリソースハブのUX改善とコンテンツ更新
- シード・プランニングのブランドカラー（エメラルドグリーン）に合わせたデザイン更新
- より直感的なナビゲーション体験を実装（アイコン付きオプション、詳細なガイダンス）
- 最新のリソースリスト（#コピペ可能プロンプト集、B3ケーススタディなど）に対応
- インタラクティブなGoogle Driveパスコピー機能を強化
- 参考サイトhttps://yoshi-seed.github.io/faq/support/のデザイン要素を取り入れた信頼感のあるUI
- 日本語フォント（Noto Sans JP）サポートを追加
- レスポンシブデザインの改善とアクセシビリティの向上

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>生成AIリソースハブ | シード・プランニング</title>
     <meta name="description" content="社内の生成AI関連リソースを目的別にナビゲートするポータルサイトです。研修資料やプロンプト集、運用ガイドを素早く見つけられます。">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
